161019: finalize 03-condvar-01-spinlock

--- a/161019/161019.tex
+++ b/161019/161019.tex
@@ -39,5 +39,6 @@
 \input{02-practice-02-race}
 \input{02-practice-03-mutex}
 \input{02-practice-04-dont-try}
+\input{03-condvar-01-spinlock}
 
 \end{document}
