--- a/161019/161019.tex
+++ b/161019/161019.tex
@@ -40,5 +40,6 @@
 \input{02-practice-03-mutex}
 \input{02-practice-04-dont-try}
 \input{03-condvar-01-spinlock}
+\input{03-condvar-02-condvar}
 
 \end{document}
