161019: add note about bool type in C to 02-practice-01-simple

--- a/161019/02-practice-01-simple.tex
+++ b/161019/02-practice-01-simple.tex
@@ -75,6 +75,7 @@ data is 1244
 		\item Из функции всегда надо что-то вернуть (хотя бы \t{NULL}).
 		\item \href{http://codeforces.com/blog/entry/17747}{Никогда} не начинайте название переменной с нижнего подчёркивания!
 		\item Константы задаются при помощи \t{\#define SOME\_CONST (value)}.
+		\item Встроенного типа \t{bool} нет, надо подключить \t{\#include~<stdbool.h>}
 	\end{itemize}
 \end{frame}
 
