161019: finalize 04-bonus.tex

--- a/161019/161019.tex
+++ b/161019/161019.tex
@@ -41,5 +41,6 @@
 \input{02-practice-04-dont-try}
 \input{03-condvar-01-spinlock}
 \input{03-condvar-02-condvar}
+\input{04-bonus}
 
 \end{document}
