161019: fix some mistypes

--- a/161019/02-practice-03-mutex.tex
+++ b/161019/02-practice-03-mutex.tex
@@ -136,7 +136,7 @@ void inc() {  // Атомарна.
     m.lock(); data++; m.unlock();
 }
 void double_inc() {  // Атомарно?
-    m.lock(); inc(); inc(); n.unlock();
+    m.lock(); inc(); inc(); m.unlock();
 }
 \end{minted}
 	\begin{itemize}
@@ -186,7 +186,7 @@ void inc_special() {
 \begin{minted}{cpp}
 void inc_special() {
     ScopedLock lock(m);  // Берём блокировку в конструкторе
-    if (conditoin()) return;
+    if (condition()) return;
     data++;
 }  // Освобождаем в деструкторе.
 \end{minted}
