--- a/161019/03-condvar-02-condvar.tex
+++ b/161019/03-condvar-02-condvar.tex
@@ -41,7 +41,7 @@ while (true) {
 
 \begin{frame}{Чуть подробнее}
 	\begin{enumerate}
-		\item Consumer проверяет \t{!global\_queue.empty()}
+		\item Consumer проверяет \t{!q.empty()}
 		\item Producer добавляет данные.
 		\item Producer вызывает \t{e.notify()}, а будить некого.
 		\item Consumer вызывает \t{e.wait()} и засыпает навечно.
@@ -106,7 +106,7 @@ while (true) {
 		\item Смысл: условная переменная "--- это способ оповещать потоки о \textit{возможном} изменении некоторого \textit{условия}, защищённого мьютексом.
 		\item Ожидание пассивное, ресурсы CPU не тратятся.
 		\item На каждое условие создаётся условная переменная.
-		\item Поток, изменивший условие, может разбудить либо все ожидающие потоки (\t{signal}), либо один случайный (\t{broadcast}).
+		\item Поток, изменивший условие, может разбудить либо все ожидающие потоки (\t{broadcast}), либо один случайный (\t{signal}).
 		\item Бывают spurious wakeup "--- система иногда может разбудить ждущий поток, даже если никто не вызывал \t{signal}/\t{broadcast}.
 		\item Поэтому важно проверять условие после пробуждения.
 	\end{itemize}
