--- a/161019/01-intro-02-how.tex
+++ b/161019/01-intro-02-how.tex
@@ -15,7 +15,7 @@ fread(file_on_disk2, 1, sizeof buf2, buf2);
 		\item Некоторые не параллелятся:
 \begin{minted}{cpp}
 int steps = 0;
-for (int x = 0; x != 0; x = f(x)); steps++;
+for (int x = 1; x != 0; x = f(x)); steps++;
 \end{minted}
 		\item Надо писать специальные алгоритмы для распределённых вычислений.
 	\end{itemize}
@@ -84,7 +84,7 @@ void process_client(Client client) {
 int main() {
     while (true) {
         Client client = get_next_client();
-        Thread(process+client, client).start();
+        Thread(process_client, client).start();
     }
 }
 \end{minted}
