161019: add TOC before 05-hometask

--- a/161019/05-hometask.tex
+++ b/161019/05-hometask.tex
@@ -1,5 +1,9 @@
 \section{Домашнее задание}
 
+\begin{frame}
+	\tableofcontents[currentsection,currentsubsection]
+\end{frame}
+
 \begin{frame}{Общая идея}
 	\begin{itemize}
 		\item Вам надо реализовать Thread Pool (почти как в Java).
