161026: add code examples for first part; extract Haskell recursion to the next block of presentation

--- a/161026/01-intro-01-imperative.tex
+++ b/161026/01-intro-01-imperative.tex
@@ -94,7 +94,7 @@ else printf("x is neither 10, nor 20\n");
 
 \begin{frame}[t]{Структурное программирование}
 	\begin{itemize}
-		\item Решение: вводим в язык конструкции \t{if}, \t{else}, \t{for} и прочие.
+		\item Решение: вводим в язык конструкции \t{if}, \t{else}, \t{for} и прочие, \textit{с явно выделенными блоками кода}.
 		\item Эти конструкции структурируют программу и выделяют, как может пойти исполнение.
 		\item Морально запрещаем себе пользоваться \t{goto}, чтобы не скатиться обратно.
 		\item Первые компьютеры появились в конце 1940-х.
