--- a/161026/01-intro-03-no-vars.tex
+++ b/161026/01-intro-03-no-vars.tex
@@ -15,70 +15,85 @@
 
 \begin{frame}{Демонстрация}
 	\begin{enumerate}
+		\item Демо: арифметика, простые типы, сравнения, списки, работа со списками, list comprehension.
+		% 01-demo.hsi
+		\item Упражнение: как найти все Пифагоровы тройки ($x^2 + y^2 = z^2$) при $1 \le x, y, z \le 10$?
 		\item Интерпретатор \t{ghci} не поддерживает многострочные определения функций.
 		\item Поэтому с некоторого момента лучше набирать код в файле, подгружая его в интерпретатор:
 			\begin{itemize}
 				\item \t{:load file.hs} (\t{:l file.hs}) компилирует \t{file.hs} и подгружает определения в интерпретатор.
 				\item \t{:reload} перекомпилирует и переподключит все файлы.
 			\end{itemize}
-		\item Демо: арифметика, простые типы, сравнения, функции, комментарии, списки, работа со списками, list comprehension.
-		\item Упражнение: как найти все Пифагоровы тройки ($x^2 + y^2 = z^2$) при $1 \le x, y, z \le 10$?
-		\item Демо: определения функций <<и>>, <<или>>, <<сумма двух чисел>>.
+		\item Демо: функции, комментарии, определения функций <<и>>, <<или>>, <<сумма двух чисел>>.
+		% 02-funcs.hs
 	\end{enumerate}
 \end{frame}
 
-\begin{frame}[t]{Жизнь без циклов}
+\begin{frame}{Жизнь без циклов}
 	Упражнения на Python:
 	\begin{itemize}
-		\item Как посчитать сумму чисел в списке, если нет переменных и циклов?\pause Функция \t{sum}.\pause
-		\item Как посчитать сумму квадратов чисел? \pause Определить лямбда-функцию для возведения в квадрат и применить \t{map} с \t{sum}.\pause
-		\item Какие вообще операции со списками мы ещё не умеем делать без циклов? \pause В которых элементы влияют друг на друга.
-		\item Например: \t{"hello world".split()}.
-		\item Тогда функцию \t{split()} пишут <<императивно>>, а всю последующую обработку "--- функционально.
+		\item Как посчитать сумму чисел в списке, если нет переменных и циклов?\pause
+		\item Функция \t{sum}.\pause
+		\item Как посчитать сумму квадратов чисел? \pause
+		\item Определить лямбда-функцию для возведения в квадрат и применить \t{map} с \t{sum}.\pause
+		\item Какие вообще операции со списками мы ещё не умеем делать без циклов? \pause
+		\item В которых элементы влияют друг на друга.
+	\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{Пример}
+	% 03-avg-len.py
+\begin{minted}{python}
+s = "hello good world"
+a = 0
+b = 0
+flag = False
+for c in s + " ":
+    if c == " ":
+        if flag:
+            a += 1
+        flag = False
+    else:
+        b += 1
+        flag = True
+print(b / a)
+\end{minted}
+	И что тут происходит?
+\end{frame}
+
+\begin{frame}{Моя реакция на такой код}
+	\begin{center}
+		\includegraphics{wtf-panda.png}
+	\end{center}
+\end{frame}
+
+\begin{frame}[fragile]{На самом деле}
+	Это вычисление средней длины слова в строке.
+
+	Чем плохо?
+	\begin{itemize}
+		\item 11 строк на такое простое действие.
+		\item Есть сложный инвариант.
+		\item Тестировать сложно: надо подбирать специальную строку, на которой отличается средняя длина слов (а не просто воспроизводится баг).
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Функциональное решение}
+	\begin{itemize}
+		\item Как записать то же самое функционально на Python? \pause
+		\item Предполагаем, что есть функции \t{avg}, \t{map}, \t{split}. \pause
+		\item \t{avg(map(len, "hello world".split()))} \pause
+		% 04-avg-len.py
+		\item Тут что-то сложное делает только функция split.
+		\item Её обычно \t{split()} пишут <<императивно>>, а всю последующую обработку "--- <<функционально>>.
 		\item Таким образом императивная сложность изолирована, все кусочки можно тестировать по отдельности.
+		\item Опять ввели абстракцию: три встроенные функции.
+		\item Оказывается, что <<необходимых кирпичиков>> не так много.
 	\end{itemize}
 \end{frame}
 
-\begin{frame}[t,fragile]{Упражнения на рекурсию}
-	Факториал:
-\begin{minted}{haskell}
-fac 0 = 1
-fac n = n * fac (n - 1)
-\end{minted}
-	Степень двойки: \pause
-\begin{minted}{haskell}
-powerOfTwo 0 = 1
-powerOfTwo n = 2 * powerOfTwo (n - 1)
-\end{minted}
-	Числа Фибоначчи: \pause
-\begin{minted}{haskell}
-fib n = fib' 0 1 n
--- Одна итерация цикла for
-fib' a b 0 = a
-fib' a b n = fib' b (a + b) (n - 1)
-\end{minted}
-	Мы увидели:
-	\begin{itemize}
-		\item Pattern matching (вместо \t{if} пишем <<шаблон>> для аргумента функции).
-		\item Апостроф является корректным символом в названии функции.
-	\end{itemize}
-\end{frame}
-
-\begin{frame}[t,fragile]{Жизнь без циклов-2}
-	Как теперь функцию \t{sum}? \pause
-\begin{minted}{haskell}
-sum' (x:xs) = x + sum xs
-sum' _ = 0
-\end{minted}
-	\begin{itemize}
-		\item Иногда можно делать сложный pattern matching вроде \t{x:xs} (список, первый элемент которого "--- \t{x}, а хвост "--- \t{xs}).
-		\item Шаблоны проверяются сверху вниз.
-		\item Вместо имени переменной можно написать \t{\_}.
-	\end{itemize}
-	А как написать в императивном стиле? \pause
-\begin{minted}{haskell}
-sum' xs = sum'' 0 xs
-sum'' a [] = a
-sum'' a (x:xs) = sum'' (a + x) xs
-\end{minted}
+\begin{frame}{Моя реакция на функциональный код}
+	\begin{center}
+		\includegraphics[scale=0.3]{satisfied-seal.jpg}
+	\end{center}
 \end{frame}
