161026: continue 02-haskell-01-recursion; add sources for exercises and demos

--- a/161026/01-intro-03-no-vars.tex
+++ b/161026/01-intro-03-no-vars.tex
@@ -16,7 +16,7 @@
 \begin{frame}{Демонстрация}
 	\begin{enumerate}
 		\item Демо: арифметика, простые типы, сравнения, списки, работа со списками, list comprehension.
-		% 01-demo.hsi
+		% 01-01-demo.hsi
 		\item Упражнение: как найти все Пифагоровы тройки ($x^2 + y^2 = z^2$) при $1 \le x, y, z \le 10$?
 		\item Интерпретатор \t{ghci} не поддерживает многострочные определения функций.
 		\item Поэтому с некоторого момента лучше набирать код в файле, подгружая его в интерпретатор:
@@ -25,7 +25,7 @@
 				\item \t{:reload} перекомпилирует и переподключит все файлы.
 			\end{itemize}
 		\item Демо: функции, комментарии, определения функций <<и>>, <<или>>, <<сумма двух чисел>>.
-		% 02-funcs.hs
+		% 01-02-funcs.hs
 	\end{enumerate}
 \end{frame}
 
@@ -39,10 +39,12 @@
 		\item Какие вообще операции со списками мы ещё не умеем делать без циклов? \pause
 		\item В которых элементы влияют друг на друга.
 	\end{itemize}
+	Демо: то же самое на Haskell.
+	% 01-03-exercise.hs
 \end{frame}
 
 \begin{frame}[fragile]{Пример}
-	% 03-avg-len.py
+	% 01-04-avg-len-imp.py
 \begin{minted}{python}
 s = "hello good world"
 a = 0
@@ -83,7 +85,7 @@ print(b / a)
 		\item Как записать то же самое функционально на Python? \pause
 		\item Предполагаем, что есть функции \t{avg}, \t{map}, \t{split}. \pause
 		\item \t{avg(map(len, "hello world".split()))} \pause
-		% 04-avg-len.py
+		% 01-05-avg-len-func.py
 		\item Тут что-то сложное делает только функция split.
 		\item Её обычно \t{split()} пишут <<императивно>>, а всю последующую обработку "--- <<функционально>>.
 		\item Таким образом императивная сложность изолирована, все кусочки можно тестировать по отдельности.
