--- a/161026/161026.tex
+++ b/161026/161026.tex
@@ -37,7 +37,7 @@
 \input{01-intro-02-decl-func}
 \input{01-intro-03-no-vars}
 \input{02-haskell-01-recursion}
-%\input{02-haskell-02-high-order}
+\input{02-haskell-02-high-order}
 %\input{02-haskell-03-lazy}
 %\input{02-haskell-04-rakes}
 %\input{03-summary-01-pros-cons}
