161026: finish 02-haskell-03-polymorph

--- a/161026/161026.tex
+++ b/161026/161026.tex
@@ -38,7 +38,7 @@
 \input{01-intro-03-no-vars}
 \input{02-haskell-01-recursion}
 \input{02-haskell-02-high-order}
-%\input{02-haskell-03-lazy}
+\input{02-haskell-03-polymorph}
 %\input{02-haskell-04-rakes}
 %\input{03-summary-01-pros-cons}
 %\input{03-summary-02-other-langs}
