161026: add note about compile-time to 02-haskell-03-polymorph

--- a/161026/02-haskell-03-polymorph.tex
+++ b/161026/02-haskell-03-polymorph.tex
@@ -16,6 +16,7 @@
 		\item Тут \t{a} и \t{b} "--- типовые переменные. На их месте может стоять любой тип.
 		\item Естественным образом получаем, что \t{map} вообще всё равно, с какими списками работать.
 		\item Haskell автоматически выводит наиболее общие типы для практически всех функций.
+		\item Все проверки типов "--- \textit{на этапе компиляции}.
 	\end{itemize}
 \end{frame}
 
