--- a/161026/161026.tex
+++ b/161026/161026.tex
@@ -39,6 +39,8 @@
 \input{02-haskell-01-recursion}
 \input{02-haskell-02-high-order}
 \input{02-haskell-03-polymorph}
+\input{02-haskell-04-lazy}
+\input{02-haskell-05-summary}
 %\input{02-haskell-04-rakes}
 %\input{03-summary-01-pros-cons}
 %\input{03-summary-02-other-langs}
