--- a/161026/161026.tex
+++ b/161026/161026.tex
@@ -41,7 +41,7 @@
 \input{02-haskell-03-polymorph}
 \input{02-haskell-04-lazy}
 \input{02-haskell-05-summary}
-%\input{02-haskell-04-rakes}
+\input{02-haskell-06-rakes}
 %\input{03-summary-01-pros-cons}
 %\input{03-summary-02-other-langs}
 %\input{04-links}
