--- a/161026/161026.tex
+++ b/161026/161026.tex
@@ -42,8 +42,7 @@
 \input{02-haskell-04-lazy}
 \input{02-haskell-05-summary}
 \input{02-haskell-06-rakes}
-%\input{03-summary-01-pros-cons}
-%\input{03-summary-02-other-langs}
+\input{03-summary}
 %\input{04-links}
 
 \end{document}
