161016: finish 04-links add fix date

--- a/161026/161026.tex
+++ b/161026/161026.tex
@@ -19,7 +19,7 @@
 \title{Функциональное программирование}
 \author{Егор Суворов}
 \institute[СПб АУ]{Курс <<Парадигмы и языки программирования>>, подгруппа 3}
-\date[19.10.2016]{Среда, 19 октября 2016 года}
+\date[26.10.2016]{Среда, 26 октября 2016 года}
 
 \setlength{\arrayrulewidth}{1pt}
 
@@ -43,6 +43,6 @@
 \input{02-haskell-05-summary}
 \input{02-haskell-06-rakes}
 \input{03-summary}
-%\input{04-links}
+\input{04-links}
 
 \end{document}
