--- a/161026/02-haskell-04-lazy.tex
+++ b/161026/02-haskell-04-lazy.tex
@@ -26,7 +26,7 @@ if' False _ y = y
 \begin{frame}[fragile]{Бесконечные структуры}
 	\begin{itemize}
 		\item Напоминание: \t{[1, 2, 3]} "--- это сахар для \t{1:2:3:[]}.
-		\item Попробуем завести бесконечный список из едини:
+		\item Попробуем завести бесконечный список из единиц:
 \begin{minted}{haskell}
 ones = 1:1:1:1:1:1:...
 \end{minted}
