--- a/161026/01-intro-03-no-vars.tex
+++ b/161026/01-intro-03-no-vars.tex
@@ -87,7 +87,7 @@ print(b / a)
 		\item \t{avg(map(len, "hello world".split()))} \pause
 		% 01-05-avg-len-func.py
 		\item Тут что-то сложное делает только функция split.
-		\item Её обычно \t{split()} пишут <<императивно>>, а всю последующую обработку "--- <<функционально>>.
+		\item Обычно \t{split()} пишут <<императивно>>, а всю последующую обработку "--- <<функционально>>.
 		\item Таким образом императивная сложность изолирована, все кусочки можно тестировать по отдельности.
 		\item Опять ввели абстракцию: три встроенные функции.
 		\item Оказывается, что <<необходимых кирпичиков>> не так много.
