161026: add random_number.png from xkcd; add some exercises

--- a/161026/01-intro-03-no-vars.tex
+++ b/161026/01-intro-03-no-vars.tex
@@ -99,3 +99,9 @@ print(b / a)
 		\includegraphics[scale=0.3]{satisfied-seal.jpg}
 	\end{center}
 \end{frame}
+
+\begin{frame}{Рандом в функциональном стиле}
+	\begin{center}
+		\includegraphics[scale=0.3]{random_number.png}
+	\end{center}
+\end{frame}
