--- a/161026/02-haskell-01-recursion.tex
+++ b/161026/02-haskell-01-recursion.tex
@@ -131,7 +131,8 @@ def foo(xs):
 
 \begin{frame}[t, fragile]{Упражнение}
 	\begin{itemize}
-		\item Напишите то же самое на Haskell.
+		\item Простая версия: написать функцию \t{prod}, считающую произведение элементов в спискею
+		\item Сложная версия: напишите удаление одинаковых значений из списка.
 		\item Возьмите код на Python в качестве основы.
 		\item Преобразуйте цикл \t{for} в рекурсию. \pause
 		\item Инвариант "--- последний добавленный элемент.
