161109: finish 01-algebraic-01-sum-type and 01-algebraic-02-standard

--- a/161109/01-algebraic-01-sum-type.tex
+++ b/161109/01-algebraic-01-sum-type.tex
@@ -127,7 +127,7 @@ bool need_processign(PaymentMethod *m) {
 \subsection{Тип-сумма}
 \begin{frame}[fragile]{Тип-сумма}
 	\begin{itemize}
-		\item Можно ввести \textit{тип-сумму}: множество его допустимых значений равно \textit{дизъюнктному объединению}\footnote{объеденение попарно непересекающихся множеств} допустимых значений составных частей.
+		\item Можно ввести \textit{тип-сумму}: множество его допустимых значений равно \textit{дизъюнктному объединению}\footnote{объединение попарно непересекающихся множеств} допустимых значений составных частей.
 		\item Чтобы обобщить до суммы произвольных типов, можно каждому значению составной части добавить <<тэг>>.
 		\item Пример: тип <<способ оплаты>>:
 \begin{minted}{haskell}
