--- a/161109/161109.tex
+++ b/161109/161109.tex
@@ -3,6 +3,9 @@
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
+\usepackage{tikz}
+\usetikzlibrary{shapes,arrows}
+\usepackage{dot2texi}
 \usepackage{minted}
 \usepackage{ulem}
 \usepackage{cmap}
