--- a/161109/161109.tex
+++ b/161109/161109.tex
@@ -38,7 +38,7 @@
 
 \input{01-algebraic-01-sum-type}
 \input{01-algebraic-02-standard}
-%\input{01-algebraic-02-examples}
+\input{01-algebraic-03-usage}
 %\input{02-classes-01-interfaces}
 %\input{02-classes-02-bonus}
 
