161109: add info about [] Int vs [Int]

--- a/161109/01-algebraic-02-standard.tex
+++ b/161109/01-algebraic-02-standard.tex
@@ -40,6 +40,7 @@ data GetResult Char = NotFound | Found Char
 \end{minted}
 		\item В Haskell такой тип называется \t{Maybe}.
 		\item А в Java есть generic-тип \t{Optional<>}).
+		\item На самом деле \t{[Int]} "--- это сахар для \t{[] Int}.
 	\end{itemize}
 \end{frame}
 
