161109: move algebra info from 01-algebraic-02-standard to 01-algebraic-03-algebra

--- a/161109/161109.tex
+++ b/161109/161109.tex
@@ -38,7 +38,8 @@
 
 \input{01-algebraic-01-sum-type}
 \input{01-algebraic-02-standard}
-\input{01-algebraic-03-usage}
+\input{01-algebraic-03-algebra}
+\input{01-algebraic-04-usage}
 \input{02-classes-01-interfaces}
 
 \end{document}
