--- a/161109/01-algebraic-03-algebra.tex
+++ b/161109/01-algebraic-03-algebra.tex
@@ -47,3 +47,46 @@ data BinOp = Add | Sub | Mul | Div
 \end{minted}
 	\end{itemize}
 \end{frame}
+
+\begin{frame}{Алгебры}
+	Для понимания этимологии словосочетания <<алгебраический тип>>:
+	\begin{itemize}
+		\item \textit{Алгебра} "--- это множество $A$, на котором ввели какие-то функции.
+		\item Каждая функция принимает некоторое число аргументов из $A$ и возвращает элемент из $A$.
+		\item Разные функции могут принимать разное число аргументов.
+		\item Никаких дополнительных требований нет.
+		\item Рациональные числа являются алгеброй с операциями:
+			\begin{enumerate}
+				\item $+ \colon \mathrm{Q} \times \mathrm{Q} \to \mathrm{Q}$
+				\item $\frac{1}{x} \colon \mathrm{Q} \to \mathrm{Q}$
+			\end{enumerate}
+		\item Также алгебрами являются все группы:
+			\begin{enumerate}
+				\item Функция-константа: $e \colon G$
+				\item Взятие обратного элемента: $x^{-1} \colon G \to G$
+				\item Умножение элементов: $\cdot \colon G \times G \to G$
+				\item Дополнительно требуются свойства группы.
+			\end{enumerate}
+		\item Мораль: если сказали <<введём операцию с элементами>> "--- уже появилась алгебра.
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Алгебра типов}
+	\begin{itemize}
+		\item Типы данных тоже образуют алгебру (обозначим их множество за T):
+			\begin{enumerate}
+				\item $\t{Int} \colon T$
+				\item $\t{Char} \colon T$
+				\item Операция <<сделать список>>: $\t{[]} \colon T \to T$
+				\item Операция <<сделать кортеж (тип-произведение)>>: $\t{(,)} \colon T \times T \to T$
+				\item Операция <<тип-сумма>>: $\t{|} \colon T \times T \to T$
+			\end{enumerate}
+		\item \textit{Алгебраический тип} "--- это тип, собранный из более простых.
+		\item Активно используются и в императивных языках: \t{vector<int>}, \t{int[]}, \t{struct \{\}}
+		\item Операцию <<сделать кортеж>> можно обозначить как умножение типов (так сделано в OCaml).
+		\item В императивных языках алгебра типов обычно более скудная.
+		\item
+			Типы высшего порядка (параметризованные) "--- это на самом деле функции над типами,
+			то есть в алгебру в Haskell входят не только типы; подробностей не будет.
+	\end{itemize}
+\end{frame}
