161109/01-algebraic-01-sum-type: add info about product-type

--- a/161109/01-algebraic-01-sum-type.tex
+++ b/161109/01-algebraic-01-sum-type.tex
@@ -1,8 +1,19 @@
 \section{Алгебраические типы данных}
-\subsection{Тип-произведение}
+\subsection{Откуда берётся тип-сумма}
 
 \begin{frame}
 	\tableofcontents[currentsection,currentsubsection]
+\end{frame}
+
+\begin{frame}{Тип-произведение}
+	\begin{itemize}
+		\item \t{int x;} принимает значения: $0, 1, -1, 2, -2, \dots$
+		\item \t{struct \{ int x, y; \} } принимает значения: $(0, 0), (0, 1), (1, 0), (-1, 0) \dots$
+		\item Множество значений \t{struct} есть декартово произведение значений составных элементов.
+		\item Поэтому \t{struct} иногда называют типом-произведением.
+		\item Тип-произведение "--- \textit{составной тип}, собирается из более маленьких.
+		\item Есть практически во всех языках.
+	\end{itemize}
 \end{frame}
 
 \begin{frame}{Упражнение}
@@ -83,7 +94,7 @@ bool need_processign(PaymentMethod *m) {
 	\end{itemize}
 \end{frame}
 
-\subsection{Тип-сумма}
+\subsection{Что такое тип-сумма}
 \begin{frame}[fragile]{Тип-сумма}
 	\begin{itemize}
 		\item Можно ввести \textit{тип-сумму}: множество его допустимых значений равно \textit{дизъюнктному объединению}\footnote{объединение попарно непересекающихся множеств} допустимых значений составных частей.
