--- a/161109/01-algebraic-03-algebra.tex
+++ b/161109/01-algebraic-03-algebra.tex
@@ -18,7 +18,7 @@ data [Int] = [] | [0] | [0,0] | [1] | ...
 			Это называется <<тип высшего порядка>>.
 			Этакие шаблоны из C++/generic'и из Java.
 		\item
-			Отсюда возникло название <<\textit{конструктор типа}>>.
+			Напоминание: отсюда возникло название <<\textit{конструктор типа}>>.
 	\end{itemize}
 \end{frame}
 
